improvement: Offer to kill old Bloop server if found running